--- a/css/styles.css
+++ b/css/styles.css
@@ -12,14 +12,34 @@ header {
   padding-bottom: 30px;
   border-color: black;
   background-color: aquamarine;
+  position: fixed;
+  position: relative;
 }
 
 h1 {
   text-align: center;
+  flex-direction: column;
+}
+
+main {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  flex-wrap: wrap;
 }
 
 .bookmark {
+  margin: 20px;
   width: 80%;
-  height: 80px;
+  height: 150px;
   background-color: green;
+  text-align: center;
+}
+
+footer {
+  position: fixed;
+  background-color: aquamarine;
+  width: 100%;
+  height: 80px;
+  position: relative;
 }
