--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,9 @@ main {
   flex-wrap: wrap;
 }
 
+div {
+  height: 200px;
+}
 .bookmark {
   margin: 20px;
   width: 80%;
@@ -36,10 +39,14 @@ main {
   text-align: center;
 }
 
+.bkmrkicon {
+}
+
 footer {
   position: fixed;
   background-color: aquamarine;
   width: 100%;
   height: 80px;
   position: relative;
+  bottom: 0;
 }
