--- a/css/styles.css
+++ b/css/styles.css
@@ -1,19 +1,28 @@
-* {
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
 body {
+  margin: 0 auto;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  background-color: blanchedalmond;
 }
 
 header {
-  border: 5px;
   width: 100%;
   padding-top: 30px;
   padding-bottom: 30px;
+  border: 5px;
   border-color: black;
+  border-bottom-left-radius: 25px;
+  border-bottom-right-radius: 25px;
   background-color: aquamarine;
   position: fixed;
   position: relative;
+  top: 0;
+  z-index: 1;
 }
 
 h1 {
@@ -30,11 +39,12 @@ main {
 
 div {
   height: 200px;
+  border-radius: 20%;
 }
 .bookmark {
   margin: 20px;
   width: 80%;
-  height: 150px;
+  height: 250px;
   background-color: green;
   text-align: center;
 }
