--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
 
 body {
   margin: 0 auto;
+  width: 50%;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   background-color: blanchedalmond;
 }
@@ -19,8 +20,7 @@ header {
   border-bottom-left-radius: 25px;
   border-bottom-right-radius: 25px;
   background-color: aquamarine;
-  position: fixed;
-  position: relative;
+  position: sticky;
   top: 0;
   z-index: 1;
 }
@@ -32,6 +32,7 @@ h1 {
 
 main {
   display: flex;
+  align-items: center;
   justify-content: center;
   flex-direction: column;
   flex-wrap: wrap;
@@ -50,13 +51,22 @@ div {
 }
 
 .bkmrkicon {
+  position: absolute;
+  right: 1px;
 }
 
 footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 3px;
   position: fixed;
   background-color: aquamarine;
   width: 100%;
   height: 80px;
-  position: relative;
   bottom: 0;
+}
+
+nav a {
+  padding: 0 2rem;
 }
