trying to make the navbar icons larger by hovering over it. Finnaly put change in comment

--- a/css/styles.css
+++ b/css/styles.css
@@ -114,3 +114,11 @@ footer {
 nav a {
   padding: 0 2rem;
 }
+
+/*.nav_button:hover {
+  opacity: 50%;
+}
+
+img header:hover {
+  width: 200%;
+}*/
