--- a/css/styles.css
+++ b/css/styles.css
@@ -45,10 +45,15 @@ div {
   margin: 20px;
 }
 
+div > h3 {
+  margin-top: -20px;
+  margin-bottom: 40px;
+}
+
 .bookmark {
   font-weight: 600;
   padding-top: 7.5%;
-  height: 250px;
+  height: 310px;
   width: 80%;
   max-width: 450px;
   align-self: center;
@@ -70,9 +75,10 @@ div {
   background-color: yellow;
   color: black;
   font-weight: bold;
-  letter-spacing: 0.5em;
+  letter-spacing: 0.3em;
   border: 2px solid white;
   border-radius: 25px;
+  width: 190px;
   height: 24%;
   padding: 2px 5px;
 }
@@ -86,7 +92,8 @@ div {
   font-style: italic;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 11;
+  font-size: 17px;
+  padding-top: 10px;
 }
 
 .category {
