Adding a about-me description for the profile-user

--- a/css/styles.css
+++ b/css/styles.css
@@ -171,3 +171,10 @@ img header:hover {
   top: 129px;
   right: 30%;
 }
+
+.about-me_profile {
+  max-width: 40%;
+  position: absolute;
+  top: 55%;
+  right: 8.5%;
+}
