styles.css change - pixel and pt to rem change

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,12 +13,12 @@ body {
 
 header {
   width: 100%;
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 1.875rem;
+  padding-bottom: 1.875rem;
   border: 5px;
   border-color: black;
-  border-bottom-left-radius: 25px;
-  border-bottom-right-radius: 25px;
+  border-bottom-left-radius: 1.563rem;
+  border-bottom-right-radius: 1.563rem;
   background-color: lightblue;
   opacity: 95%;
   position: sticky;
@@ -33,7 +33,7 @@ h1 {
   -webkit-text-stroke-width: 1.5px;
   -webkit-text-stroke-color: black;
   font-weight: 800;
-  font-size: 33pt;
+  font-size: 2.75rem;
 }
 
 main {
@@ -47,12 +47,12 @@ main {
 div {
   height: 200px;
   border-radius: 50px;
-  margin: 20px;
+  margin: 1.25rem;
 }
 
 div > h3 {
-  margin-top: -20px;
-  margin-bottom: 40px;
+  margin-top: -1.25rem;
+  margin-bottom: 2.5rem;
 }
 
 .bookmark {
@@ -85,7 +85,7 @@ div > h3 {
   border-radius: 25px;
   width: 190px;
   height: 24%;
-  padding: 2px 5px;
+  padding: 4px 5px;
 }
 
 .answer-button:hover {
@@ -97,8 +97,8 @@ div > h3 {
   font-style: italic;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 17px;
-  padding-top: 10px;
+  font-size: 1.0625rem;
+  padding-top: 0.625rem;
 }
 
 .category {
