--- a/css/styles.css
+++ b/css/styles.css
@@ -53,6 +53,9 @@ div {
 div > h3 {
   margin-top: -1.25rem;
   margin-bottom: 2.5rem;
+  -webkit-text-stroke-width: 0.04rem;
+  -webkit-text-stroke-color: white;
+  font-size: 1.59rem;
 }
 
 .bookmark {
