adding media query for navbar-ing to have all icons in one line

--- a/css/styles.css
+++ b/css/styles.css
@@ -203,3 +203,11 @@ img header:hover {
   position: absolute;
   padding: 1rem;
 }
+
+/* MEDIA QUERRY SECTION */
+
+@media (max-width: 375px) {
+  nav img {
+    width: 10%;
+  }
+}
