Adding Media-Queary mind-width for Nav-icons

--- a/css/styles.css
+++ b/css/styles.css
@@ -206,8 +206,8 @@ img header:hover {
 
 /* MEDIA QUERRY SECTION */
 
-@media (max-width: 375px) {
+@media (min-width: 375px) {
   nav img {
-    width: 10%;
+    width: 14%;
   }
 }
