--- a/css/styles.css
+++ b/css/styles.css
@@ -134,9 +134,9 @@ footer {
   bottom: 0;
 }
 
-.nav_button{
+.nav_button {
   max-width: 60px;
-  }
+}
 
 nav a {
   padding: 0 2rem;
@@ -213,5 +213,8 @@ img header:hover {
 @media (min-width: 375px) {
   nav img {
     width: 14%;
+  }
+  .bkmrkicon {
+    width: 50%;
   }
 }
