--- a/css/styles.css
+++ b/css/styles.css
@@ -150,10 +150,29 @@ img header:hover {
   width: 200%;
 }*/
 
-/*PROFILE PAGE */
+/*
+*************************
+* **~ PROFILE PAGE ~ ** * 
+------************-------
+*/
+
+.toggle_color-mode {
+  width: 80%;
+  height: 2rem;
+  border: none black;
+  display: flex;
+  justify-content: center;
+  margin-top: -1.55rem;
+  margin-bottom: 0rem;
+}
+.toggle_color-mode > button {
+  background-color: antiquewhite;
+  border-radius: 15px;
+  border: 0.5px dotted black;
+}
 
 .profile {
-  margin-top: 3.125rem;
+  margin-top: 0.3rem;
   height: 460px;
   width: 80%;
   background-color: blanchedalmond;
