I tried to add a color-mode switch/toggle - it works but not on the div container and header and footer

--- a/css/styles.css
+++ b/css/styles.css
@@ -325,3 +325,13 @@ img header:hover {
 @media (min-width: 1281px) {
   /* hi-res laptops and desktops  */
 }
+
+/*
+*** - JAVASCRIPT - *********
+TOGGLE COLOR-MODE JAVASCRIPT
+*/
+
+.alt-color {
+  background-color: black;
+  color: white;
+}
