--- a/css/styles.css
+++ b/css/styles.css
@@ -333,5 +333,6 @@ TOGGLE COLOR-MODE JAVASCRIPT
 
 .alt-color {
   background-color: black;
-  color: orange;
+  color: darkblue;
+  display: block;
 }
