--- a/css/global.css
+++ b/css/global.css
@@ -8,7 +8,7 @@ body {
   margin: 0 auto;
   /*width: 50%; */
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  background-color: blanchedalmond;
+  background-color: var(--main-bg);
 }
 
 header {
@@ -19,7 +19,7 @@ header {
   border-color: black;
   border-bottom-left-radius: 1.563rem;
   border-bottom-right-radius: 1.563rem;
-  background-color: lightblue;
+  background-color: var(--bg-col2);
   opacity: 95%;
   position: sticky;
   top: 0;
@@ -42,7 +42,7 @@ footer {
   align-items: center;
   gap: 0, 1875rem;
   position: fixed;
-  background-color: lightblue;
+  background-color: var(--bg-col2);
   opacity: 97%;
   width: 100%;
   height: 80px;
