--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,11 @@
 @import url(components/profile.css);
 @import url(media-query);
 
+:root {
+  --main-bg: #ffebcc;
+  --bg-col2: #add8e6;
+}
+
 main {
   display: flex;
   align-items: center;
@@ -27,7 +32,7 @@ main {
   margin-bottom: 0rem;
 }
 .toggle_color-mode > button {
-  background-color: antiquewhite;
+  background-color: var(--main-bg);
   border-radius: 15px;
   border: 0.5px dotted black;
 }
@@ -36,7 +41,7 @@ main {
   margin-top: 0.3rem;
   height: 460px;
   width: 80%;
-  background-color: blanchedalmond;
+  background-color: var(--main-bg);
   border: 4px solid white;
   display: flex;
   justify-content: center;
