--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,7 @@
-@import url(global.css);
-@import url(components/card.css);
-@import url(components/profile.css);
-@import url(media-query);
-
-:root {
-  --main-bg: #ffebcc;
-  --bg-col2: #add8e6;
-}
+@import "global.css";
+@import "components/card.css";
+@import "components/profile.css";
+@import "media-query.css";
 
 main {
   display: flex;
@@ -16,183 +11,6 @@ main {
   flex-wrap: wrap;
 }
 
-/*
-*************************
-* **~ PROFILE PAGE ~ ** * 
-------************-------
-*/
-
-.toggle_color-mode {
-  width: 80%;
-  height: 2rem;
-  border: none black;
-  display: flex;
-  justify-content: center;
-  margin-top: -1.55rem;
-  margin-bottom: 0rem;
-}
-.toggle_color-mode > button {
-  background-color: var(--main-bg);
-  border-radius: 15px;
-  border: 0.5px dotted black;
-}
-
-.profile {
-  margin-top: 0.3rem;
-  height: 460px;
-  width: 80%;
-  background-color: var(--main-bg);
-  border: 4px solid white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-}
-
-.profile_img {
-  min-width: 100px;
-  max-width: 600px;
-  position: absolute;
-  top: 13%;
-  right: 55%;
-}
-
-.profile_username {
-  font-size: 2.125rem;
-  position: absolute;
-  top: 129px;
-  right: 30%;
-}
-
-.about-me_profile {
-  max-width: 40%;
-  position: absolute;
-  top: 55%;
-  right: 8.5%;
-}
-
-.counter_div {
-  margin-top: 2rem;
-  background-color: none;
-  border: 2px dotted black;
-  height: 5.5rem;
-  width: 8rem;
-  position: absolute;
-  top: 71%;
-  right: 22%;
-  display: flex;
-  justify-content: center;
-  align-self: center;
-}
-
-.bookmark-counter-pic {
-  height: 30px;
-}
-
-.bookmark-counter {
-  position: absolute;
-  padding: 1rem;
-}
-
-/* MEDIA QUERRY SECTION */
-/*Mobile*/
-@media (min-width: 375px) {
-  main {
-    margin-top: 2rem;
-  }
-  header {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-  }
-
-  nav img {
-    width: 14%;
-  }
-  .bkmrkicon {
-    width: 20%;
-    top: -40px;
-    cursor: pointer;
-  }
-  div > h3 {
-    font-size: 1.4rem;
-  }
-  h1 {
-    font-size: 2rem;
-  }
-
-  /* Media Query Profile.html MOBILE-*/
-  .profile {
-    max-width: 95%;
-  }
-  .profile_img {
-    width: 45%;
-    top: 10%;
-    margin-top: -1.5rem;
-  }
-  .profile_username {
-    width: 18%;
-    top: 10%;
-  }
-  .about-me_profile {
-    max-width: 80%;
-    left: 10%;
-    margin-top: -2.5rem;
-  }
-}
-
-/*MEDIA QUERY - LAPTOP and DESKTOP */
-@media (min-width: 961px) {
-  .profile_img {
-    min-width: none;
-    max-width: 33%;
-    top: 22%;
-    left: 13%;
-  }
-  .about-me_profile {
-    max-width: 40%;
-    left: 50%;
-    transform: translate(50, 50);
-  }
-  .counter_div {
-    left: 40%;
-  }
-  nav img {
-    width: 25%;
-  }
-  .profile {
-    width: 45%;
-  }
-  .bookmark-counter {
-    position: absolute;
-    padding-top: 2rem;
-  }
-}
-@media (min-width: 1025px) {
-  /* big landscape tablets, laptops, and desktops */
-}
-@media (min-width: 1281px) {
-  /* hi-res laptops and desktops  */
-}
-
-/*Media Query Cheats */
-@media (min-width: 320px) {
-  /* smartphones, iPhone, portrait 480x320 phones */
-}
-@media (min-width: 481px) {
-  /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */
-}
-@media (min-width: 641px) {
-  /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */
-}
-@media (min-width: 961px) {
-  /* tablet, landscape iPad, lo-res laptops ands desktops */
-}
-@media (min-width: 1025px) {
-  /* big landscape tablets, laptops, and desktops */
-}
-@media (min-width: 1281px) {
-  /* hi-res laptops and desktops  */
-}
 /*
 *** - JAVASCRIPT - *********
 TOGGLE COLOR-MODE JAVASCRIPT
