--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 @import "global.css";
 @import "components/card.css";
-@import "components/profile.css";
+@import "profile.css";
 @import "media-query.css";
 
 main {
