--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 @import "global.css";
 @import "components/card.css";
 @import "profile.css";
-@import "media-query.css";
+@import "components/media-query.css";
 
 main {
   display: flex;
