--- a/css/components/card.css
+++ b/css/components/card.css
@@ -7,6 +7,7 @@ div {
 div > h3 {
   margin-top: -1.25rem;
   margin-bottom: 2.5rem;
+  padding: 0 1rem;
   -webkit-text-stroke-width: 0.04rem;
   -webkit-text-stroke-color: white;
   font-size: 1.59rem;
@@ -22,8 +23,8 @@ div > h3 {
   background-color: limegreen;
   text-align: center;
   position: relative;
-  /*border: 3px solid white;
-    box-shadow: 2px 3.5px white;*/
+  border: 0.5rem solid white;
+  /* box-shadow: 2px 3.5px white;*/
 }
 
 .bkmrkicon {
