--- a/css/global.css
+++ b/css/global.css
@@ -17,6 +17,8 @@ body {
 }
 
 header {
+  display: flex;
+  justify-content: center;
   width: 100%;
   padding-top: 1.875rem;
   padding-bottom: 1.875rem;
@@ -32,13 +34,18 @@ header {
 }
 
 h1 {
-  text-align: center;
-  flex-direction: column;
+  /*text-align: center;
+  flex-direction: column;*/
   color: white;
   -webkit-text-stroke-width: 1.5px;
   -webkit-text-stroke-color: black;
   font-weight: 800;
   font-size: 2.75rem;
+}
+
+header > img {
+  flex-direction: row;
+  width: 4rem;
 }
 
 footer {
