--- a/css/components/media-query.css
+++ b/css/components/media-query.css
@@ -1,5 +1,38 @@
 /* MEDIA QUERRY SECTION */
 /*Mobile*/
+@media (min-width: 320px) {
+  header {
+    height: 2%;
+  }
+
+  header > h1 {
+    font-size: 1.2em;
+    padding: 0;
+  }
+
+  header > img {
+    display: none;
+  }
+
+  .quizcard > h3 {
+    font-size: 1em;
+    margin-left: -1rem;
+  }
+
+  .quizcard {
+    transform: translate(-3.5%, 0);
+  }
+}
+
+.bkmrkicon {
+  width: 20%;
+  right: 4.5%;
+}
+
+footer img {
+  width: 2rem;
+}
+
 /*@media (min-width: 375px) {
 */
 @media (min-width: 360px) {
@@ -9,6 +42,9 @@
   header {
     padding-top: 1rem;
     padding-bottom: 1rem;
+  }
+  .quizcard {
+    transform: translate(-3%, 0);
   }
 
   nav img {
