--- a/css/components/card.css
+++ b/css/components/card.css
@@ -8,7 +8,7 @@ div {
 div > h3 {
   position: absolute;
   top: 2.3rem;
-  margin-top: 0;
+  margin-top: 1.5rem;
   margin-bottom: 2.5rem;
   padding: 0 1rem;
   color: white;
