--- a/css/components/media-query.css
+++ b/css/components/media-query.css
@@ -1,7 +1,7 @@
 /* MEDIA QUERRY SECTION
 /*Mobile*/
 
-/@media screen and (min-width: 320px) and (max-width: 480px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   /* smartphones, iPhone, portrait 480x320 phones */
   .quizcard {
     width: 95%;
@@ -18,7 +18,7 @@
   }
 }
 
-@media screen and (min-width: 320px) and (orientation: landscape) and (max-width: 400px) {
+@media screen and (orientation: landscape) and (min-width: 320px) and (max-width: 400px) {
   header {
     height: 20vh;
   }
