change bookmark-icon class-make it more readable

--- a/css/components/card.css
+++ b/css/components/card.css
@@ -35,7 +35,7 @@ div > h3 {
   /* box-shadow: 2px 3.5px white;*/
 }
 
-.bkmrkicon {
+.bookmark-icon {
   position: absolute;
   right: -19px;
   top: -33px;
