--- a/css/components/media-query.css
+++ b/css/components/media-query.css
@@ -1,10 +1,12 @@
 /* MEDIA QUERRY SECTION
 /*Mobile*/
 
-@media screen and (min-width: 320px) and (max-width: 480px) {
+@media screen and (min-width: 320px) and (max-width: 359px) {
   /* smartphones, iPhone, portrait 480x320 phones */
+
   .quizcard {
     width: 95%;
+    transform: translate(-3.5%, 0);
   }
 
   .quizcard > h3 {
@@ -16,41 +18,83 @@
   .quizcard > button {
     margin-top: 5rem;
   }
-}
 
-@media screen and (orientation: landscape) and (min-width: 320px) and (max-width: 400px) {
   header {
-    height: 20vh;
+    height: 2%;
   }
 
   header > h1 {
-    font-size: 1.5em;
+    font-size: 1.2em;
+    padding: 0;
   }
 
   header > img {
     display: none;
   }
 
-  footer {
-    height: 20vh;
+  .quizcard > h3 {
+    font-size: 1em;
+    margin-left: -1rem;
+  }
+
+  .bookmark-icon {
+    width: 20%;
+    right: 4.5%;
+  }
+
+  footer img {
+    width: 2rem;
   }
 }
 
-@media (min-width: 481px) {
-  /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */
+/* @media (min-width: 375px) */
 
-  /* .quizcard > h3 {
-    top: 01rem;
-  } */
+@media screen and (min-width: 360px) and (max-width: 480px) {
+  main {
+    margin-top: 2rem;
+  }
+  header {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
+  .quizcard {
+    width: 95%;
+    right: 4.5%;
+  }
+
+  nav img {
+    width: 14%;
+  }
+
+  .bookmark-icon {
+    width: 20%;
+    top: -40px;
+    cursor: pointer;
+  }
+  div > h3 {
+    font-size: 1rem;
+  }
+  h1 {
+    font-size: 2rem;
+  }
 }
 
-@media (min-width: 519px) {
+@media screen and (min-width: 481px) and (max-width: 518px) {
+  /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */
+
+  .quizcard > h3 {
+    top: 01rem;
+  }
+}
+
+@media screen and (min-width: 519px) and (max-width: 640px) {
   .profile_img {
     width: 40%;
     top: 5%;
     left: 10%;
   }
 }
+
 @media (min-width: 641px) {
   .about-me_profile {
     font-size: 0.85rem;
@@ -64,145 +108,35 @@
     left: 10%;
   }
 
-  @media screen and (max-width: 480px) and (min-width: 320px) {
+  @media screen and (orientation: landscape) and (min-width: 320px) and (max-width: 359px) {
     header {
-      height: 2%;
+      height: 20vh;
     }
 
     header > h1 {
-      font-size: 1.2em;
-      padding: 0;
+      font-size: 1.5em;
     }
 
     header > img {
       display: none;
     }
 
-    .quizcard > h3 {
-      font-size: 1em;
-      margin-left: -1rem;
-    }
-
-    .quizcard {
-      transform: translate(-3.5%, 0);
+    footer {
+      height: 20vh;
     }
   }
-
-  .bkmrkicon {
-    width: 20%;
-    right: 4.5%;
-  }
-
-  footer img {
-    width: 2rem;
-  }
-
-  /*@media (min-width: 375px) 
-*/
-  @media screen and (max-width: 480px) and (min-width: 360px) {
-    main {
-      margin-top: 2rem;
-    }
-    header {
-      padding-top: 1rem;
-      padding-bottom: 1rem;
-    }
-    .quizcard {
-      transform: translate(-3%, 0);
-    }
-
-    nav img {
-      width: 14%;
-    }
-    .bkmrkicon {
-      width: 20%;
-      top: -40px;
-      cursor: pointer;
-    }
-    div > h3 {
-      font-size: 1.4rem;
-    }
-    h1 {
-      font-size: 2rem;
-    }
-
-    /* Media Query Profile.html MOBILE-*/
-    .profile {
-      max-width: 95%;
-    }
-    .profile_img {
-      width: 45%;
-      top: 10%;
-      margin-top: -1.5rem;
-    }
-    .profile_username {
-      width: 18%;
-      top: 10%;
-    }
-    .about-me_profile {
-      max-width: 80%;
-      left: 10%;
-      margin-top: -4rem;
-    }
-    .counter_div {
-      top: 75%;
-      border: 1px dotted black;
-      height: 4.8rem;
-      width: 7rem;
-    }
-  }
-
-  /*MEDIA QUERY - LAPTOP and DESKTOP */
-  @media (min-width: 961px) {
-    .profile_img {
-      min-width: none;
-      max-width: 33%;
-      top: 22%;
-      left: 13%;
-    }
-    .about-me_profile {
-      max-width: 40%;
-      left: 50%;
-      transform: translate(50, 50);
-    }
-    .counter_div {
-      left: 40%;
-    }
-    nav img {
-      width: 25%;
-    }
-    .profile {
-      width: 45%;
-    }
-    .bookmark-counter {
-      position: absolute;
-      padding-top: 2rem;
-    }
-  }
-  @media (min-width: 1025px) {
-    /* big landscape tablets, laptops, and desktops */
-  }
-  @media (min-width: 1281px) {
-    /* hi-res laptops and desktops  */
-  }
-
-  /*Media Query Cheats */
-
-  /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */
 }
-@media (min-width: 961px) {
-  .about-me_profile {
-    font-size: 0.85rem;
-    letter-spacing: 0.08rem;
-    top: 46%;
-    width: 14rem;
-  }
-
-  *.counter_div {
-    left: 10%;
-  }
-  /* tablet, landscape iPad, lo-res laptops ands desktops */
+@media (min-width: 1025px) {
+  /* big landscape tablets, laptops, and desktops */
 }
+@media (min-width: 1281px) {
+  /* hi-res laptops and desktops  */
+}
+
+/*Media Query Cheats */
+/* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */
+/* tablet, landscape iPad, lo-res laptops ands desktops */
+
 @media (min-width: 1025px) {
   /* big landscape tablets, laptops, and desktops */
 }
