--- a/css/profile.css
+++ b/css/profile.css
@@ -76,3 +76,73 @@
   position: absolute;
   padding: 1rem;
 }
+
+/*PROFILE-PAGE*/
+/* Media Query PROFILE.html MOBILE-*/
+@media screen and (min-width: 320px) {
+  .profile {
+    max-width: 95%;
+  }
+  .profile_img {
+    width: 45%;
+    top: 10%;
+    margin-top: -1.5rem;
+  }
+  .profile_username {
+    width: 18%;
+    top: 10%;
+  }
+  .about-me_profile {
+    max-width: 80%;
+    left: 10%;
+    margin-top: -4rem;
+  }
+  .counter_div {
+    top: 75%;
+    border: 1px dotted black;
+    height: 4.8rem;
+    width: 7rem;
+  }
+}
+
+/*MEDIA QUERY - LAPTOP and DESKTOP */
+@media screen and (min-width: 961px) {
+  .profile_img {
+    min-width: none;
+    max-width: 33%;
+    top: 22%;
+    left: 13%;
+  }
+  .about-me_profile {
+    max-width: 40%;
+    left: 50%;
+    transform: translate(50, 50);
+  }
+  .counter_div {
+    left: 40%;
+  }
+  nav img {
+    width: 25%;
+  }
+  .profile {
+    width: 45%;
+  }
+  .bookmark-counter {
+    position: absolute;
+    padding-top: 2rem;
+  }
+}
+
+/* 
+@media (min-width: 961px) {
+  .about-me_profile {
+    font-size: 0.85rem;
+    letter-spacing: 0.08rem;
+    top: 46%;
+    width: 14rem;
+  }
+
+  *.counter_div {
+    left: 10%;
+  }
+} */
