ordering css files

--- a/css/global.css
+++ b/css/global.css
@@ -103,3 +103,27 @@ nav ul {
 img header:hover {
   width: 200%;
 } */
+
+/*
+*** - JAVASCRIPT - *********
+TOGGLE COLOR-MODE JAVASCRIPT
+*/
+
+.alt-color {
+  background-color: black;
+  color: white;
+  letter-spacing: 0.1rem;
+  font-size: smaller;
+  -webkit-text-stroke-width: 0.013rem;
+  -webkit-text-stroke-color: greenyellow;
+}
+body.alt-color div {
+  background-color: black;
+}
+
+body.alt-color header {
+  background-color: black;
+}
+body.alt-color footer {
+  background-color: black;
+}
