adjust img in nav-bar to new hight after ul-wrap

--- a/css/global.css
+++ b/css/global.css
@@ -96,6 +96,10 @@ nav ul {
   flex-direction: row;
   justify-content: space-evenly;
 }
+
+nav ul img {
+  width: 100%;
+}
 /* .nav_button:hover {
   opacity: 50%;
 }
