--- a/css/global.css
+++ b/css/global.css
@@ -143,3 +143,36 @@ body.alt-color footer img {
   background-color: blue;
   border-radius: 15px;
 }
+
+/*High Contrast Mode*/
+
+.contrast-color {
+  background-color: red;
+  color: yellow;
+  letter-spacing: 0.1rem;
+  font-size: smaller;
+  -webkit-text-stroke-width: 0.013rem;
+  -webkit-text-stroke-color: black;
+}
+body.contrast-color div {
+  background-color: red;
+}
+
+body.contrast-color header {
+  background-color: red;
+  border: 1px dashed white;
+}
+
+body.contrast-color header > h1 {
+  -webkit-text-stroke-width: 0.05rem;
+  -webkit-text-stroke-color: black;
+}
+
+body.contrast-color footer {
+  background-color: red;
+  border: 1px dashed white;
+}
+body.contrast-color footer img {
+  background-color: pink;
+  border-radius: 15px;
+}
