update import link style.css

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,3 +2,4 @@
 @import "components/card.css";
 @import "profile.css";
 @import "components/media-query.css";
+@import "components/quizcard-form.css";
