--- a/css/components/card.css
+++ b/css/components/card.css
@@ -7,8 +7,9 @@ div > h3 {
   position: absolute;
   top: 2.3rem;
   margin-top: 1.5rem;
-  margin-bottom: 2.5rem;
+  margin-bottom: 1.5rem;
   padding: 0 1rem;
+  padding-bottom: 1rem;
   color: white;
   -webkit-text-stroke-width: 0.07rem;
   -webkit-text-stroke-color: black;
@@ -23,7 +24,7 @@ div > h3 {
   font-weight: 600;
   padding-top: 7.5%;
   margin: 1.25rem;
-  height: 310px;
+  height: 25rem;
   width: 80%;
   max-width: 450px;
   align-self: center;
@@ -43,6 +44,7 @@ div > h3 {
 }
 
 .answer-button {
+  top: 3.3rem;
   margin-top: 20%;
   background-color: yellow;
   color: black;
