--- a/css/components/card.css
+++ b/css/components/card.css
@@ -70,6 +70,16 @@ div > h3 {
   padding-top: 0.625rem;
 }
 
+.hideanswer {
+  font-weight: normal;
+  font-style: italic;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 1.0625rem;
+  padding-top: 0.625rem;
+  display: none;
+}
+
 .category {
   font-size: 0.8em;
   font-weight: 300;
