--- a/css/components/card.css
+++ b/css/components/card.css
@@ -20,6 +20,25 @@ div > h3 {
   font-weight: bold;
 }
 
+.question {
+  position: absolute;
+  top: 2.3rem;
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+  padding: 0 1rem;
+  padding-bottom: 1rem;
+  color: white;
+  -webkit-text-stroke-width: 0.07rem;
+  -webkit-text-stroke-color: black;
+  font-size: 1.59rem;
+  letter-spacing: 0.055rem;
+  word-spacing: 0.43rem;
+  line-height: 125%;
+  font-weight: bold;
+}
+/*Same as div >h3 
+*/
+
 .quizcard {
   font-weight: 600;
   padding-top: 7.5%;
