--- a/css/components/card.css
+++ b/css/components/card.css
@@ -22,19 +22,25 @@ div > h3 {
 
 .question {
   position: absolute;
+  display: :flex;
+  
   top: 2.3rem;
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
-  padding: 0 1rem;
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+  padding: 0.2rem 0.2rem 0.2rem .02rem;
   padding-bottom: 1rem;
-  color: white;
-  -webkit-text-stroke-width: 0.07rem;
-  -webkit-text-stroke-color: black;
-  font-size: 1.59rem;
+  color: black;
+  -webkit-text-stroke-width: 0.02rem;
+  -webkit-text-stroke-color: white;
+  /*font-size: 1.59rem;*/
   letter-spacing: 0.055rem;
   word-spacing: 0.43rem;
   line-height: 125%;
   font-weight: bold;
+}
+
+.question-size {
+  font-size: 1rem;
 }
 /*Same as div >h3 
 */
@@ -47,7 +53,7 @@ div > h3 {
   width: 80%;
   max-width: 450px;
   align-self: center;
-  background-color: limegreen;
+  background-color: lightgreen;
   text-align: center;
   position: relative;
   border: 0.5rem solid white;
