--- a/css/components/card.css
+++ b/css/components/card.css
@@ -22,12 +22,11 @@ div > h3 {
 
 .question {
   position: absolute;
-  display: :flex;
-  
+  display: flex;
   top: 2.3rem;
   margin-top: 2.5rem;
   margin-bottom: 2.5rem;
-  padding: 0.2rem 0.2rem 0.2rem .02rem;
+  padding: 0.2rem 0.2rem 0.2rem 0.02rem;
   padding-bottom: 1rem;
   color: black;
   -webkit-text-stroke-width: 0.02rem;
