--- a/css/global.css
+++ b/css/global.css
@@ -189,3 +189,18 @@ body.contrast-color footer img {
 body.contrast-color .counter_div {
   border: 2px dotted white;
 }
+
+/*
+V2*/
+
+.refresh_button {
+  border: 1rem solid white;
+  border-radius: 50%;
+  animation: newQuestion 5s infinite;
+
+  @keyframes newQuestion {
+    30% {
+      transform: rotate(360deg);
+    }
+  }
+}
